// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapFontPipelineToTheme test blackAliasTokens 1`] = `
Object {
  "body1": Object {
    "face": "primary",
    "size": 12,
    "weight": "400",
  },
  "body1Strong": Object {
    "face": "primary",
    "size": 12,
    "weight": "600",
  },
  "body2": Object {
    "face": "primary",
    "size": 14,
    "weight": "400",
  },
  "body2Strong": Object {
    "face": "primary",
    "size": 14,
    "weight": "600",
  },
  "caption1": Object {
    "face": "primary",
    "size": 10,
    "weight": "400",
  },
  "display": Object {
    "face": "primary",
    "size": 40,
    "weight": "600",
  },
  "largeTitle": Object {
    "face": "primary",
    "size": 40,
    "weight": "400",
  },
  "subtitle1": Object {
    "face": "primary",
    "size": 20,
    "weight": "400",
  },
  "subtitle1Strong": Object {
    "face": "primary",
    "size": 20,
    "weight": "600",
  },
  "subtitle2": Object {
    "face": "primary",
    "size": 16,
    "weight": "400",
  },
  "subtitle2Strong": Object {
    "face": "primary",
    "size": 16,
    "weight": "600",
  },
  "title1": Object {
    "face": "primary",
    "size": 28,
    "weight": "400",
  },
  "title1Strong": Object {
    "face": "primary",
    "size": 28,
    "weight": "600",
  },
}
`;

exports[`mapFontPipelineToTheme test colorfulAliasTokens 1`] = `
Object {
  "body1": Object {
    "face": "primary",
    "size": 12,
    "weight": "400",
  },
  "body1Strong": Object {
    "face": "primary",
    "size": 12,
    "weight": "600",
  },
  "body2": Object {
    "face": "primary",
    "size": 14,
    "weight": "400",
  },
  "body2Strong": Object {
    "face": "primary",
    "size": 14,
    "weight": "600",
  },
  "caption1": Object {
    "face": "primary",
    "size": 10,
    "weight": "400",
  },
  "display": Object {
    "face": "primary",
    "size": 40,
    "weight": "600",
  },
  "largeTitle": Object {
    "face": "primary",
    "size": 40,
    "weight": "400",
  },
  "subtitle1": Object {
    "face": "primary",
    "size": 20,
    "weight": "400",
  },
  "subtitle1Strong": Object {
    "face": "primary",
    "size": 20,
    "weight": "600",
  },
  "subtitle2": Object {
    "face": "primary",
    "size": 16,
    "weight": "400",
  },
  "subtitle2Strong": Object {
    "face": "primary",
    "size": 16,
    "weight": "600",
  },
  "title1": Object {
    "face": "primary",
    "size": 28,
    "weight": "400",
  },
  "title1Strong": Object {
    "face": "primary",
    "size": 28,
    "weight": "600",
  },
}
`;

exports[`mapFontPipelineToTheme test darkGrayAliasTokens 1`] = `
Object {
  "body1": Object {
    "face": "primary",
    "size": 12,
    "weight": "400",
  },
  "body1Strong": Object {
    "face": "primary",
    "size": 12,
    "weight": "600",
  },
  "body2": Object {
    "face": "primary",
    "size": 14,
    "weight": "400",
  },
  "body2Strong": Object {
    "face": "primary",
    "size": 14,
    "weight": "600",
  },
  "caption1": Object {
    "face": "primary",
    "size": 10,
    "weight": "400",
  },
  "display": Object {
    "face": "primary",
    "size": 40,
    "weight": "600",
  },
  "largeTitle": Object {
    "face": "primary",
    "size": 40,
    "weight": "400",
  },
  "subtitle1": Object {
    "face": "primary",
    "size": 20,
    "weight": "400",
  },
  "subtitle1Strong": Object {
    "face": "primary",
    "size": 20,
    "weight": "600",
  },
  "subtitle2": Object {
    "face": "primary",
    "size": 16,
    "weight": "400",
  },
  "subtitle2Strong": Object {
    "face": "primary",
    "size": 16,
    "weight": "600",
  },
  "title1": Object {
    "face": "primary",
    "size": 28,
    "weight": "400",
  },
  "title1Strong": Object {
    "face": "primary",
    "size": 28,
    "weight": "600",
  },
}
`;

exports[`mapPipelineToShadow test darkShadowTokens 1`] = `
Object {
  "shadow16": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 16,
      "color": "#00000047",
      "x": 0,
      "y": 8,
    },
  },
  "shadow16brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 16,
      "color": "#00000040",
      "x": 0,
      "y": 8,
    },
  },
  "shadow2": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 2,
      "color": "#00000047",
      "x": 0,
      "y": 1,
    },
  },
  "shadow28": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#00000066",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 28,
      "color": "#0000007a",
      "x": 0,
      "y": 14,
    },
  },
  "shadow28brand": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 28,
      "color": "#00000040",
      "x": 0,
      "y": 14,
    },
  },
  "shadow2brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 2,
      "color": "#00000040",
      "x": 0,
      "y": 1,
    },
  },
  "shadow4": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 4,
      "color": "#00000047",
      "x": 0,
      "y": 2,
    },
  },
  "shadow4brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 4,
      "color": "#00000040",
      "x": 0,
      "y": 2,
    },
  },
  "shadow64": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#00000066",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 64,
      "color": "#0000007a",
      "x": 0,
      "y": 32,
    },
  },
  "shadow64brand": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 64,
      "color": "#00000040",
      "x": 0,
      "y": 32,
    },
  },
  "shadow8": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 8,
      "color": "#00000047",
      "x": 0,
      "y": 4,
    },
  },
  "shadow8brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 8,
      "color": "#00000040",
      "x": 0,
      "y": 4,
    },
  },
}
`;

exports[`mapPipelineToShadow test hcShadowTokens 1`] = `
Object {
  "shadow16": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 16,
      "color": "#00000047",
      "x": 0,
      "y": 8,
    },
  },
  "shadow16brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 16,
      "color": "#00000040",
      "x": 0,
      "y": 8,
    },
  },
  "shadow2": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 2,
      "color": "#00000047",
      "x": 0,
      "y": 1,
    },
  },
  "shadow28": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#00000066",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 28,
      "color": "#0000007a",
      "x": 0,
      "y": 14,
    },
  },
  "shadow28brand": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 28,
      "color": "#00000040",
      "x": 0,
      "y": 14,
    },
  },
  "shadow2brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 2,
      "color": "#00000040",
      "x": 0,
      "y": 1,
    },
  },
  "shadow4": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 4,
      "color": "#00000047",
      "x": 0,
      "y": 2,
    },
  },
  "shadow4brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 4,
      "color": "#00000040",
      "x": 0,
      "y": 2,
    },
  },
  "shadow64": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#00000066",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 64,
      "color": "#0000007a",
      "x": 0,
      "y": 32,
    },
  },
  "shadow64brand": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 64,
      "color": "#00000040",
      "x": 0,
      "y": 32,
    },
  },
  "shadow8": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 8,
      "color": "#00000047",
      "x": 0,
      "y": 4,
    },
  },
  "shadow8brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 8,
      "color": "#00000040",
      "x": 0,
      "y": 4,
    },
  },
}
`;

exports[`mapPipelineToShadow test lightShadowTokens 1`] = `
Object {
  "shadow16": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000001f",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 16,
      "color": "#00000024",
      "x": 0,
      "y": 8,
    },
  },
  "shadow16brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 16,
      "color": "#00000040",
      "x": 0,
      "y": 8,
    },
  },
  "shadow2": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000001f",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 2,
      "color": "#00000024",
      "x": 0,
      "y": 1,
    },
  },
  "shadow28": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#00000033",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 28,
      "color": "#0000003d",
      "x": 0,
      "y": 14,
    },
  },
  "shadow28brand": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 28,
      "color": "#00000040",
      "x": 0,
      "y": 14,
    },
  },
  "shadow2brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 2,
      "color": "#00000040",
      "x": 0,
      "y": 1,
    },
  },
  "shadow4": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000001f",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 4,
      "color": "#00000024",
      "x": 0,
      "y": 2,
    },
  },
  "shadow4brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 4,
      "color": "#00000040",
      "x": 0,
      "y": 2,
    },
  },
  "shadow64": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#00000033",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 64,
      "color": "#0000003d",
      "x": 0,
      "y": 32,
    },
  },
  "shadow64brand": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 64,
      "color": "#00000040",
      "x": 0,
      "y": 32,
    },
  },
  "shadow8": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000001f",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 8,
      "color": "#00000024",
      "x": 0,
      "y": 4,
    },
  },
  "shadow8brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 8,
      "color": "#00000040",
      "x": 0,
      "y": 4,
    },
  },
}
`;

exports[`mapPipelineToTheme test darkAliasTokens 1`] = `
Object {
  "brandBackground": "#1651aa",
  "brandBackground2": "#004578",
  "brandBackgroundDisabled": undefined,
  "brandBackgroundHover": "#185abd",
  "brandBackgroundPressed": "#004578",
  "brandBackgroundSelected": "#13458f",
  "brandBackgroundStatic": "#185abd",
  "brandForeground1": "#6794d7",
  "brandForeground1Disabled": undefined,
  "brandForeground1Pressed": undefined,
  "brandForeground2": "#aec6eb",
  "brandForegroundLink": "#2e6ac5",
  "brandForegroundLinkHover": "#aec6eb",
  "brandForegroundLinkPressed": "#6794d7",
  "brandForegroundLinkSelected": "#2e6ac5",
  "brandStroke1": "#2e6ac5",
  "brandStroke2": "#0e336a",
  "compoundBrandBackground1": "#2e6ac5",
  "compoundBrandBackground1Hover": "#6794d7",
  "compoundBrandBackground1Pressed": "#185abd",
  "compoundBrandForeground1": "#2e6ac5",
  "compoundBrandForeground1Hover": "#6794d7",
  "compoundBrandForeground1Pressed": "#185abd",
  "compoundBrandStroke1": "#2e6ac5",
  "compoundBrandStroke1Hover": "#6794d7",
  "compoundBrandStroke1Pressed": "#185abd",
  "dangerBackground1": "#3f1011",
  "dangerBackground2": "#751d1f",
  "dangerBackground3": "#d13438",
  "dangerBorder1": "#d13438",
  "dangerBorder2": "#dc5e62",
  "dangerBorderActive": "#e37d80",
  "dangerForeground1": "#e37d80",
  "dangerForeground2": "#f1bbbc",
  "dangerForeground3": "#e37d80",
  "dangerForegroundInverted": "#d13438",
  "neutralBackground1": "#292929",
  "neutralBackground1Hover": "#3d3d3d",
  "neutralBackground1Pressed": "#1f1f1f",
  "neutralBackground1Selected": "#383838",
  "neutralBackground2": "#1f1f1f",
  "neutralBackground2Hover": "#333333",
  "neutralBackground2Pressed": "#141414",
  "neutralBackground2Selected": "#2e2e2e",
  "neutralBackground3": "#141414",
  "neutralBackground3Hover": "#292929",
  "neutralBackground3Pressed": "#0a0a0a",
  "neutralBackground3Selected": "#242424",
  "neutralBackground4": "#0a0a0a",
  "neutralBackground4Hover": "#1f1f1f",
  "neutralBackground4Pressed": "#000000",
  "neutralBackground4Selected": "#1a1a1a",
  "neutralBackground5": "#000000",
  "neutralBackground5Hover": "#141414",
  "neutralBackground5Pressed": "#050505",
  "neutralBackground5Selected": "#0f0f0f",
  "neutralBackground6": "#333333",
  "neutralBackgroundDisabled": "#141414",
  "neutralBackgroundInverted": "#ffffff",
  "neutralForeground1": "#ffffff",
  "neutralForeground1Hover": "#ffffff",
  "neutralForeground1Pressed": "#ffffff",
  "neutralForeground1Selected": "#ffffff",
  "neutralForeground2": "#d6d6d6",
  "neutralForeground2BrandHover": "#6794d7",
  "neutralForeground2BrandPressed": "#2e6ac5",
  "neutralForeground2BrandSelected": "#6794d7",
  "neutralForeground2Hover": "#ffffff",
  "neutralForeground2Pressed": "#ffffff",
  "neutralForeground2Selected": "#ffffff",
  "neutralForeground3": "#adadad",
  "neutralForeground3BrandHover": "#6794d7",
  "neutralForeground3BrandPressed": "#2e6ac5",
  "neutralForeground3BrandSelected": "#6794d7",
  "neutralForeground3Hover": "#d6d6d6",
  "neutralForeground3Pressed": "#d6d6d6",
  "neutralForeground3Selected": "#d6d6d6",
  "neutralForeground4": "#999999",
  "neutralForegroundDisabled": "#5c5c5c",
  "neutralForegroundInverted": "#242424",
  "neutralForegroundInvertedLink": "#ffffff",
  "neutralForegroundInvertedLinkHover": "#ffffff",
  "neutralForegroundInvertedLinkPressed": "#ffffff",
  "neutralForegroundInvertedLinkSelected": "#ffffff",
  "neutralForegroundOnBrand": "#ffffff",
  "neutralForegroundOnBrandHover": "#ffffff",
  "neutralForegroundOnBrandPressed": "#ffffff",
  "neutralForegroundOnBrandSelected": "#ffffff",
  "neutralStencil1": "#333333",
  "neutralStencil2": "#575757",
  "neutralStroke1": "#666666",
  "neutralStroke1Hover": "#757575",
  "neutralStroke1Pressed": "#6b6b6b",
  "neutralStroke1Selected": "#707070",
  "neutralStroke2": "#525252",
  "neutralStroke3": "#3d3d3d",
  "neutralStrokeAccessible": "#adadad",
  "neutralStrokeAccessibleHover": "#bdbdbd",
  "neutralStrokeAccessiblePressed": "#b3b3b3",
  "neutralStrokeAccessibleSelected": "#6794d7",
  "neutralStrokeDisabled": "#424242",
  "outofofficeBackground1": "#3a1136",
  "outofofficeBackground2": "#6d2064",
  "outofofficeBackground3": "#c239b3",
  "outofofficeBorder1": "#c239b3",
  "outofofficeBorder2": "#d161c4",
  "outofofficeBorderActive": "#da7ed0",
  "outofofficeForeground1": "#da7ed0",
  "outofofficeForeground2": "#edbbe7",
  "outofofficeForeground3": "#d161c4",
  "severeBackground1": "#411200",
  "severeBackground2": "#7a2101",
  "severeBackground3": "#da3b01",
  "severeBorder1": "#da3b01",
  "severeBorder2": "#e9835e",
  "severeBorderActive": "#e9835e",
  "severeForeground1": "#e9835e",
  "severeForeground2": "#f4bfab",
  "severeForeground3": "#e9835e",
  "strokeFocus1": "#000000",
  "strokeFocus2": "#ffffff",
  "subtleBackground": "#00000000",
  "subtleBackgroundHover": "#383838",
  "subtleBackgroundPressed": "#2e2e2e",
  "subtleBackgroundSelected": "#333333",
  "successBackground1": "#052505",
  "successBackground2": "#094509",
  "successBackground3": "#107c10",
  "successBorder1": "#107c10",
  "successBorder2": "#9fd89f",
  "successBorderActive": "#54b054",
  "successForeground1": "#54b054",
  "successForeground2": "#9fd89f",
  "successForeground3": "#9fd89f",
  "successForegroundInverted": "#107c10",
  "transparentBackground": "#00000000",
  "transparentBackgroundHover": "#00000000",
  "transparentBackgroundPressed": "#00000000",
  "transparentBackgroundSelected": "#00000000",
  "transparentStroke": "#00000000",
  "transparentStrokeDisabled": "#00000000",
  "transparentStrokeInteractive": "#00000000",
  "warningBackground1": "#4c4400",
  "warningBackground2": "#817400",
  "warningBackground3": "#fde300",
  "warningBorder1": "#fde300",
  "warningBorder2": "#fdea3d",
  "warningBorderActive": "#feee66",
  "warningForeground1": "#feee66",
  "warningForeground2": "#fef7b2",
  "warningForeground3": "#fdea3d",
  "warningForegroundInverted": "#817400",
}
`;

exports[`mapPipelineToTheme test lightAliasTokens 1`] = `
Object {
  "brandBackground": "#185abd",
  "brandBackground2": "#eff6fc",
  "brandBackgroundDisabled": undefined,
  "brandBackgroundHover": "#1651aa",
  "brandBackgroundPressed": "#004578",
  "brandBackgroundSelected": "#13458f",
  "brandBackgroundStatic": "#185abd",
  "brandForeground1": "#185abd",
  "brandForeground1Disabled": undefined,
  "brandForeground1Pressed": undefined,
  "brandForeground2": "#1651aa",
  "brandForegroundLink": "#1651aa",
  "brandForegroundLinkHover": "#13458f",
  "brandForegroundLinkPressed": "#004578",
  "brandForegroundLinkSelected": "#1651aa",
  "brandStroke1": "#185abd",
  "brandStroke2": "#d2e0f4",
  "compoundBrandBackground1": "#185abd",
  "compoundBrandBackground1Hover": "#1651aa",
  "compoundBrandBackground1Pressed": "#13458f",
  "compoundBrandForeground1": "#185abd",
  "compoundBrandForeground1Hover": "#1651aa",
  "compoundBrandForeground1Pressed": "#13458f",
  "compoundBrandStroke1": "#185abd",
  "compoundBrandStroke1Hover": "#1651aa",
  "compoundBrandStroke1Pressed": "#13458f",
  "dangerBackground1": "#fdf6f6",
  "dangerBackground2": "#f1bbbc",
  "dangerBackground3": "#d13438",
  "dangerBorder1": "#f1bbbc",
  "dangerBorder2": "#d13438",
  "dangerBorderActive": "#d13438",
  "dangerForeground1": "#bc2f32",
  "dangerForeground2": "#751d1f",
  "dangerForeground3": "#d13438",
  "dangerForegroundInverted": "#dc5e62",
  "neutralBackground1": "#ffffff",
  "neutralBackground1Hover": "#f5f5f5",
  "neutralBackground1Pressed": "#e0e0e0",
  "neutralBackground1Selected": "#ebebeb",
  "neutralBackground2": "#fafafa",
  "neutralBackground2Hover": "#f0f0f0",
  "neutralBackground2Pressed": "#dbdbdb",
  "neutralBackground2Selected": "#e6e6e6",
  "neutralBackground3": "#f5f5f5",
  "neutralBackground3Hover": "#ebebeb",
  "neutralBackground3Pressed": "#d6d6d6",
  "neutralBackground3Selected": "#e0e0e0",
  "neutralBackground4": "#f0f0f0",
  "neutralBackground4Hover": "#fafafa",
  "neutralBackground4Pressed": "#f5f5f5",
  "neutralBackground4Selected": "#ffffff",
  "neutralBackground5": "#ebebeb",
  "neutralBackground5Hover": "#f5f5f5",
  "neutralBackground5Pressed": "#f0f0f0",
  "neutralBackground5Selected": "#fafafa",
  "neutralBackground6": "#e6e6e6",
  "neutralBackgroundDisabled": "#f0f0f0",
  "neutralBackgroundInverted": "#616161",
  "neutralForeground1": "#242424",
  "neutralForeground1Hover": "#242424",
  "neutralForeground1Pressed": "#242424",
  "neutralForeground1Selected": "#242424",
  "neutralForeground2": "#424242",
  "neutralForeground2BrandHover": "#185abd",
  "neutralForeground2BrandPressed": "#1651aa",
  "neutralForeground2BrandSelected": "#185abd",
  "neutralForeground2Hover": "#242424",
  "neutralForeground2Pressed": "#242424",
  "neutralForeground2Selected": "#242424",
  "neutralForeground3": "#616161",
  "neutralForeground3BrandHover": "#185abd",
  "neutralForeground3BrandPressed": "#1651aa",
  "neutralForeground3BrandSelected": "#185abd",
  "neutralForeground3Hover": "#424242",
  "neutralForeground3Pressed": "#424242",
  "neutralForeground3Selected": "#424242",
  "neutralForeground4": "#707070",
  "neutralForegroundDisabled": "#bdbdbd",
  "neutralForegroundInverted": "#ffffff",
  "neutralForegroundInvertedLink": "#ffffff",
  "neutralForegroundInvertedLinkHover": "#ffffff",
  "neutralForegroundInvertedLinkPressed": "#ffffff",
  "neutralForegroundInvertedLinkSelected": "#ffffff",
  "neutralForegroundOnBrand": "#ffffff",
  "neutralForegroundOnBrandHover": "#ffffff",
  "neutralForegroundOnBrandPressed": "#ffffff",
  "neutralForegroundOnBrandSelected": "#ffffff",
  "neutralStencil1": "#e6e6e6",
  "neutralStencil2": "#fafafa",
  "neutralStroke1": "#d1d1d1",
  "neutralStroke1Hover": "#c7c7c7",
  "neutralStroke1Pressed": "#b3b3b3",
  "neutralStroke1Selected": "#bdbdbd",
  "neutralStroke2": "#e0e0e0",
  "neutralStroke3": "#f0f0f0",
  "neutralStrokeAccessible": "#616161",
  "neutralStrokeAccessibleHover": "#575757",
  "neutralStrokeAccessiblePressed": "#4d4d4d",
  "neutralStrokeAccessibleSelected": "#185abd",
  "neutralStrokeDisabled": "#e0e0e0",
  "outofofficeBackground1": "#fdf5fc",
  "outofofficeBackground2": "#edbbe7",
  "outofofficeBackground3": "#c239b3",
  "outofofficeBorder1": "#edbbe7",
  "outofofficeBorder2": "#c239b3",
  "outofofficeBorderActive": "#c239b3",
  "outofofficeForeground1": "#af33a1",
  "outofofficeForeground2": "#6d2064",
  "outofofficeForeground3": "#c239b3",
  "severeBackground1": "#fdf6f3",
  "severeBackground2": "#f4bfab",
  "severeBackground3": "#da3b01",
  "severeBorder1": "#f4bfab",
  "severeBorder2": "#da3b01",
  "severeBorderActive": "#da3b01",
  "severeForeground1": "#c43501",
  "severeForeground2": "#7a2101",
  "severeForeground3": "#da3b01",
  "strokeFocus1": "#ffffff",
  "strokeFocus2": "#000000",
  "subtleBackground": "#00000000",
  "subtleBackgroundHover": "#f5f5f5",
  "subtleBackgroundPressed": "#e0e0e0",
  "subtleBackgroundSelected": "#ebebeb",
  "successBackground1": "#f1faf1",
  "successBackground2": "#9fd89f",
  "successBackground3": "#107c10",
  "successBorder1": "#9fd89f",
  "successBorder2": "#107c10",
  "successBorderActive": "#107c10",
  "successForeground1": "#0e700e",
  "successForeground2": "#094509",
  "successForeground3": "#107c10",
  "successForegroundInverted": "#359b35",
  "transparentBackground": "#00000000",
  "transparentBackgroundHover": "#00000000",
  "transparentBackgroundPressed": "#00000000",
  "transparentBackgroundSelected": "#00000000",
  "transparentStroke": "#00000000",
  "transparentStrokeDisabled": "#00000000",
  "transparentStrokeInteractive": "#00000000",
  "warningBackground1": "#fffef5",
  "warningBackground2": "#fef7b2",
  "warningBackground3": "#fde300",
  "warningBorder1": "#fef7b2",
  "warningBorder2": "#fde300",
  "warningBorderActive": "#fde300",
  "warningForeground1": "#817400",
  "warningForeground2": "#817400",
  "warningForeground3": "#fde300",
  "warningForegroundInverted": "#fef7b2",
}
`;
